--- a/about.html
+++ b/about.html
@@ -51,37 +51,104 @@
     </div>
     <div class="container">
         <div class="col-sm-4 col-xs-6">
-            <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+            <div class="ih-item circle colored effect3 left_to_right">
+                <a href="#">
                 <div class="img"><img src="img/e-board/veena.jpg" alt="img"></div>
                 <div class="info">
                     <h3>Veena Dali</h3>
                     <p>President</p>
-                </div></a></div>
+                </div>
+                </a>
+            </div>
         </div>
         <div class="row e-board">
             <div class="col-sm-4 col-xs-6">
-                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
                     <div class="img"><img src="img/e-board/kyle.jpg" alt="img"></div>
                     <div class="info">
                         <h3>Kyle Mann</h3>
                         <p>VP of Operations</p>
-                    </div></a></div>
+                    </div>
+                    </a>
+                </div>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
                     <div class="img"><img src="img/e-board/an.png" alt="img"></div>
                     <div class="info">
                         <h3>An Nguyen</h3>
                         <p>VP of Client Relations</p>
-                    </div></a></div>
+                    </div>
+                    </a>
+                </div>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <div class="ih-item circle colored effect3 left_to_right"><a href="#">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="img/e-board/olivia.jpg" alt="img"></div>
+                        <div class="info">
+                            <h3>Olivia DEng</h3>
+                            <p>Treasurer</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
                     <div class="img"><img src="img/e-board/chris.jpg" alt="img"></div>
                     <div class="info">
                         <h3>Chris Yip</h3>
                         <p>Secretary</p>
-                    </div></a></div>
+                    </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="img/e-board/robin.jpeg" alt="img"></div>
+                        <div class="info">
+                            <h3>Robin Liu</h3>
+                            <p>Director of Marketing</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="img/e-board/chi.JPG" alt="img"></div>
+                        <div class="info">
+                            <h3>Chi Zhang</h3>
+                            <p>Director of Business Development</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="img/e-board/alexandra.png" alt="img"></div>
+                        <div class="info">
+                            <h3>Alexandra Miller-Browne</h3>
+                            <p>Director of ...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <div class="ih-item circle colored effect3 left_to_right">
+                    <a href="#">
+                        <div class="img"><img src="img/e-board/Leen.jpg" alt="img"></div>
+                        <div class="info">
+                            <h3>Leen AlShenibr</h3>
+                            <p>Director of Education</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
