--- a/header-footer.html
+++ b/header-footer.html
@@ -52,15 +52,23 @@
   <div class="footer">
     <div class="presub">
       <div class="subscribe-bar">
-        <div>
-          <form role="form">
-            <label for="email">Keep up to date</label>
-            <div class="form-group">
-              <input type="email" class="form-control" id="email" placeholder="Enter your email">
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+        <div id="mc_embed_signup">
+          <form action="//globalappinitiative.us3.list-manage.com/subscribe/post?u=525cc44792cfdfc0e57cc650e&amp;id=0de0281ce3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <label>Keep up to date with our newsletter</label>
+            <div id="form-group">
+              <input type="text" value="" name="FNAME" class="required form-control" id="mce-FNAME" placeholder="First Name">
+              <input type="text" value="" name="LNAME" class="required form-control" id="mce-LNAME" placeholder="Last Name">
+              <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Enter your email">
+              <div style="position: absolute; left: -5000px;"><input type="text" name="b_525cc44792cfdfc0e57cc650e_0de0281ce3" tabindex="-1" value=""></div> <!-- input 2 stop bots -->
+              <input type="submit" value="Subscribe" name="subscribe" class="btn btn-default"></div>
             </div>
-            <button type="submit" class="btn btn-default">Subscribe</button>
           </form>
         </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='MMERGE3';ftypes[3]='text';fnames[5]='MMERGE5';ftypes[5]='radio';fnames[4]='MMERGE4';ftypes[4]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
+
       </div>
     </div>
     <div style="clear:both"></div>
