--- a/education/index.html
+++ b/education/index.html
@@ -8,8 +8,8 @@
   <meta name="author" content=""/>
   <title>Be sure to Change this Title - Global App Initiative </title>
   <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/css/global.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../css/global.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
@@ -26,15 +26,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/"><img height="48px" src="/img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+        <a href="/"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/about/">About</a></li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/education/">Education</a></li>
-          <li><a href="/events/">Events</a></li>
-          <li><a href="/contact/">Contact</a></li>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../projects/index.html">Projects</a></li>
+          <li><a href="../education/index.html">Education</a></li>
+          <li><a href="../events/index.html">Events</a></li>
+          <li><a href="../contact/students/index.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -43,7 +43,7 @@
   <!-- main body-->
   <div class="body-container">
     <div class="container">
-      <h2>This page is still under construction.</h2><br>
+      <h2>Education Page.</h2><br>
       Sorry for the inconvenience! We recommend <a href="/">going back to the home page</a>.
     </div>
     <div style="margin:0 auto">
