--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- <script src="/js/bootstrap.min.js"/> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="js/home.js"></script>
 </head>
 <body>
   
@@ -44,10 +45,7 @@
     </div>
   </nav>
 
-  <!-- main body-->
-  <div class="body-container"></div>
-
-  <!-- Header -->
+  <!-- Home Header -->
   <header>
     <div class="container">
       <div class="intro-text">
@@ -58,6 +56,51 @@
       </div>
     </div>
   </header>
+
+  <!-- main body-->
+  <div class="container-fluid body-container">
+      <div id="home-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+              <li data-target="#home-carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#home-carousel" data-slide-to="1"></li>
+              <li data-target="#home-carousel" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                  <img src="img/home/community.png" alt="community members">
+                  <div class="carousel-caption">
+                      <h3>We are community</h3>
+                      <p>
+                          Our ambition is to use the skills we learn to help our community. We partner
+                          with nonprofit organization to bridge the gap between technology and
+                          community service. Our partners' causes cover an array of social and economic
+                          problems including education, health care, and homelessness.
+                      </p>
+                      <a href="projects/index.html">See the nonprofits we've helped</a>
+                  </div>
+              </div>
+              <div class="item">
+                  <img src="img/home/diverse.png" alt="diverse">
+                  <div class="carousel-caption">
+
+                  </div>
+              </div>
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#home-carousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#home-carousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+  </div>
 
   <!-- Site footer -->
   <div class="footer">
